<resources>
    <string name="app_name">CouchBaseTestApp</string>
    <string name="add_new_org">add</string>
    <string name="sync">sync</string>
    <string name="new_org">New organization</string>
    <string name="new_org_hint_name">name...</string>
    <string name="new_org_hint_geo">geo...</string>
    <string name="new_org_hint_type">type...</string>
    <string name="new_org_button_create">save</string>
    <string name="new_org_button_cancel">cancel</string>
</resources>
