<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_org"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_text_new_org_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_org_hint_name"/>

    <EditText
        android:id="@+id/edit_text_new_org_geo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_org_hint_geo"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edit_text_new_org_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_org_hint_type"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new_org_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/new_org_button_create"/>

        <Button
            android:id="@+id/button_new_org_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/new_org_button_cancel"/>
    </LinearLayout>
</LinearLayout>